This file has been uploaded

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -25,7 +25,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             app:mt_navIconEnabled="true"
-            app:mt_placeholder="FlipApps" />
+            app:mt_placeholder="Search..." />
 
 
     </RelativeLayout>
